--- a/src/data/grammar/searchable-card-category.yaml
+++ b/src/data/grammar/searchable-card-category.yaml
@@ -26,21 +26,37 @@ searchableCardCategory:
     [_cardCategory:bounce spell][_cardCategoryClass:bounce][_targetCardType:creature,permanent,nonland permanent][_cardCategorySearchTerm:"return target #_targetCardType# to"]
 
 searchableCardCategoryCustomQuery:
- - >
-  [_cardCategory:mana dork][_cardCategoryClass:mana dorks][_customQuery:text=pool t=creature cmc=<3]
- - >
-  [_cardCategory:weenie][cardCategoryClass:weenies][_customQuery:pow=1 tou=1]
+ # - >
+ #  [_cardCategory:mana dork][_cardCategoryClass:mana dorks][_customQuery:text=pool t=creature cmc=<3]
+ # - >
+ #  [_cardCategory:weenie][cardCategoryClass:weenies][_customQuery:pow=1 tou=1]
+ #  - >
+ #  [_cardCategory:fatty][cardCategoryClass:fatties][_customQuery:pow=>4 tou=>4 text!=flying]
+ # - >
+ #  [_cardCategory:finisher][cardCategoryClass:finishers][_customQuery:pow=>5 tou=>5 text=flying pow|=>5 tou=>5 text=enters]
+ # - >
+ #  "[_cardCategory:coinflip card][cardCategoryClass:coinflip cards][_customQuery:text=coin text|=coins]"
+ # - > 
+ #  [_cardCategory:sweeper][cardCategoryClass:sweepers][_customQuery:text="destroy all creatures" text|="exile all creatures" text|="damage to each creature" text|="?creatures get -" text!="0"]
+ # - >
+ #  [_cardCategory:accelerator,mana accelerator][cardCategoryClass:acceleration,mana acceleration][_customQuery:text=add text=pool text=sacrifice text|=add text=pool text!={T}]
+ # - >
+ #  [_cardCategory:engine piece,combo piece][cardCategoryClass:combo pieces,engine pieces][_customQuery:t=enchantment t|=artifact text=whenever t!=creature text=whenever text|=upkeep text|=instead text|="are the chosen" t!=aura t!=equipment]
+ # - >
+ #  [_cardCategory:hatebear][_cardCategoryClass:hatebears][_bearClause:cmc=>1 cmc=<4 pow=>1][_customQuery:text="more to cast" text|="can't search" text|="players can't" text|="can't cast" text|="be cast" text|="chosen name"  text|="reveals his" text|="counter target" text|="?destroy target non" #_bearClause# text!="you cast" text!="you can't" text!="nonblack"]
+  # - >
+  #   [_cardCategory:mana rock][_cardCategoryClass:mana rocks][_customQuery:text={T} text=pool text!=sacrifice t=artifact t!=creature t!=land]
+  # - >
+  #   [_cardCategory:mill card][_cardCategoryClass:milling][_customQuery:text="library into his or her graveyard"]
+  # - >
+  #   [_cardCategory:draw seven][_cardCategoryClass:draw sevens][_customQuery:text="draw seven" text|="draws seven"]
   - >
-  [_cardCategory:fatty][cardCategoryClass:fatties][_customQuery:pow=>4 tou=>4 text!=flying]
- - >
-  [_cardCategory:finisher][cardCategoryClass:finishers][_customQuery:pow=>5 tou=>5 text=flying pow|=>5 tou=>5 text=enters]
- - >
-  "[_cardCategory:coinflip card][cardCategoryClass:coinflip cards][_customQuery:text=coin text|=coins]"
- - > 
-  [_cardCategory:sweeper][cardCategoryClass:sweepers][_customQuery:text="destroy all creatures" text|="exile all creatures" text|="damage to each creature" text|="?creatures get -" text!="0"]
- - >
-  [_cardCategory:accelerator,mana accelerator][cardCategoryClass:acceleration,mana acceleration][_customQuery:text=add text=pool text=sacrifice text|=add text=pool text!={T}]
- - >
-  [_cardCategory:engine piece,combo piece][cardCategoryClass:combo pieces,engine pieces][_customQuery:t=enchantment t|=artifact text=whenever t!=creature text=whenever text|=upkeep text|=instead text|="are the chosen" t!=aura t!=equipment]
- - >
-  [_cardCategory:hatebear][_cardCategoryClass:hatebears][_bearClause:cmc=>1 cmc=<4 pow=>1][_customQuery:text="more to cast" text|="can't search" text|="players can't" text|="can't cast" text|="be cast" text|="chosen name"  text|="reveals his" text|="counter target" text|="?destroy target non" #_bearClause# text!="you cast" text!="you can't" text!="nonblack"]
+    [_cardCategory:grizzly bear,bear][_cardCategoryClass:grizzly bears,bears][_customQuery:cmc=2 pow=2 tou=2]
+  - >
+    [_cardCategory:gray ogre][_cardCategoryClass:gray ogres][_customQuery:cmc=3 pow=2 tou=2]
+  - >
+    [_cardCategory:trained armadon,armadon][_cardCategoryClass:trained armadons,armadons][_customQuery:cmc=3 pow=3 tou=3]
+  - >
+    [_cardCategory:snidd][_cardCategoryClass:snidds][_customQuery:cmc=5 pow=3 tou=3 text!=flying]
+  - >
+    [_cardCategory:deadly insect][_cardCategoryClass:deadly insect][_customQuery:pow=6 tou=1]
