--- a/src/data/grammar/debug/debugging.yaml
+++ b/src/data/grammar/debug/debugging.yaml
@@ -10,3 +10,4 @@ dbgLong:
   - "#dbgLong71#"
 dbgLong71: =========-=========-=========-=========-=========-=========-=========-O
 dbgLong70: =========-=========-=========-=========-=========-=========-=========-
+dbgCap: "[headline:raphaël lévy drafts urza's saga in malmö']#headline.capitalizeAll#"
