--- a/src/data/grammar/mtg-pros.yaml
+++ b/src/data/grammar/mtg-pros.yaml
@@ -48,7 +48,8 @@
       "144 delicious hardboiled eggs#pluralPronouns#",
       "the 1979 Toronto Blue Jays#pluralPronouns#",
       "McGruff the Crime Dog#malePronouns#",
-      "Jackal Onassis#pluralPronouns#"
+      "Jackal Onassis#pluralPronouns#",
+      "a goldfish"
   ],
   "pros": [
       "The DCI",
