--- a/src/data/grammar/images/svg-four-cards.yaml
+++ b/src/data/grammar/images/svg-four-cards.yaml
@@ -61,10 +61,10 @@ headlineAnything:
 - "#format.capitalize# Staples"
 
 headlineCardfinder:
-# - "[#pickFourCardsFromFinderSearchBlock#]Draft leftovers from #_cardSet#"
-# - "[#pickFourCardsFromFinderSearchBlock#]#_cardSet# Draft leftovers"
-# - "[#pickFourCardsFromFinderSearchSet#][_count:All three,The only,Some]#_count# [_desc:good,playable,money]#_desc# cards from #_cardSet#"
-# - "[#pickFourCardsFromFinderSearchCreatureType#]#_creatureType.capitalize# Tribal staples"
+- "[#pickFourCardsFromFinderSearchBlock#]Draft [_chaff:leftovers,chaff]#_chaff# from #_cardSet#"
+- "[#pickFourCardsFromFinderSearchBlock#]#_cardSet# Draft [_chaff:leftovers,chaff]#_chaff#"
+- "[#pickFourCardsFromFinderSearchSet#][_count:All three,The only,Some]#_count# [_desc:good,playable,money]#_desc# cards from #_cardSet#"
+- "[#pickFourCardsFromFinderSearchCreatureType#]#_creatureType.capitalize# Tribal staples"
 - "[#pickFourCardsFromFinderSearchCardBroadCategory#][_adj:classic,#cardQuality#][_desc:Three #_adj#,#_adj.capitalize#]#_desc# #_cardCategory.s#"
 - "[#pickFourCardsFromFinderSearchCardBroadCategory#]#_cardCategory.capitalize.s# collection"
 - "[#pickFourCardsFromFinderSearchCardBroadCategory#]#_cardCategory.capitalize#[_saleType:flash,two-fer,bundle,member] sale"
@@ -117,9 +117,9 @@ pickFourCardsFromFinderSearchTypeOrCategory:
  - "[#pickFourCardsFromFinderSearchCreatureType#][_cardType:#_creatureType#]"
 
 pickFourCardsFromFinderSearchCardBroadCategory:
- - "[#pickFourCardsFromFinderSearchCardType#][_cardCategory:#_cardType#]"
- - "[#pickFourCardsFromFinderSearchCreatureType#][_cardCategory:#_creatureType#]"
- - "[#pickFourCardsFromFinderSearchCategory#][_cardCategory:#_cardCategory#]"
+ # - "[#pickFourCardsFromFinderSearchCardType#][_cardCategory:#_cardType#]"
+ # - "[#pickFourCardsFromFinderSearchCreatureType#][_cardCategory:#_creatureType#]"
+ # - "[#pickFourCardsFromFinderSearchCategory#][_cardCategory:#_cardCategory#]"
  - "[#pickFourCardsFromFinderSearchCustomCategory#][_cardCategory:#_cardCategory#]"
 
 pickFourCardsFromFinderSearchCreatureType: >
